httpd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpd
  labels:
    role: search
