httpd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: httpd
  labels:
    app: httpd
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
  - port: 80
    protocol: TCP
