httpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  namespace: httpd
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: ingress-class-pro
  rules:
    - host: opportalhttp2.westeurope.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            path: /data
            backend:
              service:
                name: httpd
                port:
                  number: 80
    - host: minikube
      http:
        paths:
          - pathType: Prefix
            path: /data
            backend:
              service:
                name: httpd
                port:
                  number: 80
